
	libmisc/copydir.c cleanup
	* libmisc/copydir.c: Split copy_tree() in more maintainable functions:
	copy_entry(), copy_dir(), copy_symlink(), copy_hardlink(),
	copy_special(), and copy_file().
	* libmisc/copydir.c: -1 is used to indicate an error, directly set err
	to -1, instead of incrementing it, and checking if not nul at the
	end.

2007-12-27  Nicolas François  <nicolas.francois@centraliens.net>

	gpasswd cleanup
	* src/gpasswd.c: Add argument name to the internal function
	prototypes.
	* src/gpasswd.c: Document global variables.
	* src/gpasswd.c: New function: process_flags(). Split the processing
	of options out of main().
	* src/gpasswd.c: New functions: open_files(), close_files(),
	update_group(). Split out from main() to simplify this (too) big
	function.
	* src/gpasswd.c: New functions: check_perms(), get_group(),
	change_passwd(), check_flags(). Split out of main() to simplify main().
	* src/gpasswd.c: Avoid implicit brackets.
	* src/gpasswd.c: Avoid assignment in comparisons.
	* src/gpasswd.c: Avoid implicit conversions to booleans.

2007-12-27  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 462_warn_to_edit_shadow
	* NEW, src/vipw.c: Recommend editing the shadowed (resp. regular) file
	if the regular (resp. shadowed) file was edited.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 451_login_PATH
	* NEWS, libmisc/setupenv.c: Export PATH according to ENV_PATH and
	ENV_SUPATH, as for su. This impacts login.
	* man/login.1.xml: PATH and SUPATH are now used both when PAM support
	is disabled and enabled.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 496_login_init_session
	* src/login.c, src/sulogin.c: If started as init, start a new session.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 408_passwd_check_arguments
	* NEWS, src/passwd.c: Make sure that no more than one username
	argument was provided.
